test/files/neg/t5887.check
t5887.scala:6: error: type mismatch;
 found   : Int(22)
 required: Throwable => ?
  def f = try ??? catch 22
                        ^
t5887.scala:10: error: missing parameter type for expanded function
The argument types of an anonymous function must be fully known. (SLS 8.5)
Expected type was: ?
  def h = List("x") map (s => try { case _ => 7 })
                                  ^
t5887.scala:29: error: type mismatch;
 found   : TheOldCollegeTry.this.catcher.type
 required: Throwable => Int
  def noLongerAllower: Int = try 42 catch catcher
                                          ^
t5887.scala:8: warning: A try without a catch or finally is equivalent to putting its body in a block; no exceptions are handled.
  def g = try 42
          ^
t5887.scala:10: warning: A try without a catch or finally is equivalent to putting its body in a block; no exceptions are handled.
  def h = List("x") map (s => try { case _ => 7 })
                              ^
t5887.scala:12: warning: This catches all Throwables. If this is really intended, use `case _ : Throwable` to clear this warning.
  def j = try ??? catch (_ => 42)
                           ^
t5887.scala:18: warning: This catches all Throwables. If this is really intended, use `case _ : Throwable` to clear this warning.
  def k2 = try 27 catch recover
                        ^
4 warnings
3 errors
